# romanian-law-data

./: .gitignore  README.md  create_views.sql  justfile  pyproject.toml
.github/workflows/: sync.yml
data/lookups/: cedilla.yaml  romanian_months.yaml  singleton_citations.yaml  type_shorthand.yaml
etl/: extract.py  load.py  transform.py
scripts/: audit.py  build_fts.py  collect.py  export.py  normalize.py  parse.py
tests/: conftest.py  fixtures.jsonl  test_corpus_invariants.py  test_load.py  test_transform.py
