[project]
name = "romanian-law-data"
version = "0.1.0"
description = "ETL pipeline producing parquet bundles of Romanian legal acts."
requires-python = ">=3.12"
dependencies = [
    "zeep>=4.2",
    "voyageai>=0.3",
    "polars>=1.0",
    "pyarrow>=17",
    "loguru>=0.7",
    "httpx>=0.27",
    "duckdb>=1.5.3",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
